# Scrivai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: settings.json
agents/: auditor.yaml  extractor.yaml  generator.yaml
api/io/: index.html
api/knowledge/: index.html
api/models/: index.html
api/pes/: index.html
api/workspace/: index.html
concepts/evolution/: index.html
concepts/pes/: index.html
concepts/workspace/: index.html
dev-docs/: TD.md  design.md
dev-docs/superpowers/plans/: 2026-04-16-scrivai-m0.25.md  2026-04-16-scrivai-m0.5.md  2026-04-17-scrivai-m1.0.md  2026-04-17-scrivai-m1.5a.md  2026-04-17-scrivai-m1.5b.md  2026-04-17-scrivai-m2.md  2026-04-18-scrivai-m3a.md  2026-04-20-prompt-management.md
dev-docs/superpowers/specs/: 2026-04-16-scrivai-m0-design.md  2026-04-16-scrivai-m0.5-design.md  2026-04-16-scrivai-m0.75-design.md  2026-04-17-scrivai-m1.0-design.md  2026-04-17-scrivai-m1.5-design.md  2026-04-17-scrivai-m2-design.md
docs/: TD.md  architecture.md  design.md  index.md  sdk_design.md
docs/api/: evolution.md  io.md  knowledge.md  models.md  pes.md  testing.md  workspace.md
docs/concepts/: evolution.md  knowledge.md  pes.md  trajectory.md  workspace.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/superpowers/plans/: 2026-04-16-scrivai-m0.75.md  2026-04-16-scrivai-m0.md  2026-04-17-scrivai-m1.5c.md
docs/superpowers/specs/: 2026-04-16-scrivai-m0.25-design.md
docs/zh/: index.md
docs/zh/concepts/: evolution.md  knowledge.md  pes.md  trajectory.md  workspace.md
docs/zh/examples/: index.md
docs/zh/getting-started/: installation.md  quickstart.md
examples/: 01_audit_single_doc.py  02_generate_with_revision.py  03_evolve_skill_workflow.py  README.md  index.html
examples/data/: seed_demo_feedback.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/converted/: loop_template_9ad536ca.md  table_sample_7312059a.md
scripts/: make_loop_template.py  make_table_sample.py  make_workpaper_template.py  verify_m3a_release.sh
scrivai/: __init__.py  exceptions.py  llm.py  project.py
scrivai/agents/: __init__.py  auditor.py  auditor.yaml  extractor.py  extractor.yaml  generator.py  generator.yaml
scrivai/audit/: __init__.py  engine.py
scrivai/cli/: __init__.py  __main__.py  io_cmd.py  library.py  trajectory_cmd.py  workspace_cmd.py
scrivai/evolution/: __init__.py  budget.py  evaluator.py  promote.py  proposer.py  runner.py  schema.py  store.py  trigger.py
scrivai/generation/: __init__.py  context.py  engine.py
scrivai/io/: __init__.py  convert.py  render.py
scrivai/knowledge/: __init__.py  base.py  cases.py  factory.py  rules.py  store.py  templates.py
scrivai/models/: __init__.py  evolution.py  knowledge.py  pes.py  trajectory.py  workspace.py
scrivai/pes/: __init__.py  base.py  config.py  hooks.py  llm_client.py  phase_log.py
scrivai/pes/prompts/: __init__.py  manager.py  prompt_spec.yaml
scrivai/testing/: __init__.py  contract.py  fake_trajectory.py  mock_pes.py  tmp_workspace.py
scrivai/trajectory/: __init__.py  hooks.py  schema.py  store.py
scrivai/utils/: __init__.py  doc_pipeline.py  json_repair.py  office_tools.py
scrivai/workspace/: manager.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/evolution/: index.html
site/api/io/: index.html
site/api/knowledge/: index.html
site/api/models/: index.html
site/api/testing/: index.html
site/changelog/: index.html
site/search/: search_index.json
skills/available-tools/: SKILL.md
skills/inspect-document/: SKILL.md
skills/render-output/: SKILL.md
skills/search-knowledge/: SKILL.md
tests/: conftest.py
tests/contract/: conftest.py  test_auditor_pes.py  test_auditor_pes_verdict.py  test_base_pes.py  test_base_pes_sdk.py  test_bash_whitelist.py  test_cli.py  test_evolution_budget.py  test_evolution_evaluator.py  test_evolution_models.py  test_evolution_promote.py  test_evolution_proposer.py  test_evolution_runner.py  test_evolution_store.py  test_evolution_stubs.py  test_evolution_trigger.py  test_extractor_pes.py  test_generator_pes.py  test_io_smoke.py  test_libraries.py  test_llm_client.py  test_mock_pes.py  test_models.py  test_pes_config.py  test_phase_file_contract.py  test_prompt_manager.py  test_public_api.py  test_qmd_contract.py  test_reexport.py  test_testing_helpers.py  test_trajectory_hook.py  test_trajectory_store.py  test_workspace.py
tests/integration/: test_audit_flow.py  test_doc_pipeline_e2e.py  test_generation_audit_cycle.py  test_generation_flow.py  test_m1_end_to_end.py  test_m2_evolution_cycle.py  test_multichapter_flow.py  test_project_sdk_flow.py
tests/unit/: test_audit.py  test_audit_real.py  test_chunkers.py  test_doc_pipeline.py  test_doc_pipeline_real.py  test_generation.py  test_generation_real.py  test_json_repair.py  test_knowledge.py  test_llm.py  test_llm_real.py  test_office_tools.py  test_project.py  test_project_real.py  test_version.py
utils/: doc_pipeline.py
zh/: index.html
(+32 files in other folders)
