[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrivai"
version = "0.2.0a0"
description = "Claude Agent 编排框架 — 文档审核 / 生成场景"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "chengzhang yu", email = "iomgaaycz@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "qmd>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/iomgaa/scrivai"
Repository = "https://github.com/iomgaa/scrivai"
Issues = "https://github.com/iomgaa/scrivai/issues"

[tool.setuptools.packages.find]
include = ["scrivai*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "contract: 契约测试(契约稳定性 / 跨项目协议)",
    "integration: 真实 API 调用测试(需要网络和 API key)",
    "unit: 单元测试(使用 mock)",
]
addopts = "-v --tb=short"
