[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrivai"
version = "0.1.7"
description = "Configurable document generation & audit framework built on Claude Agent SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "chengzhang yu", email = "iomgaaycz@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "qmd>=0.1.2",
    "pluggy>=1.4",
    "requests>=2.28",
    "docxtpl>=0.16",
    "claude-agent-sdk>=0.1.61",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/iomgaa-ycz/Scrivai"
Documentation = "https://iomgaa-ycz.github.io/Scrivai/"
Repository = "https://github.com/iomgaa-ycz/Scrivai"
Issues = "https://github.com/iomgaa-ycz/Scrivai/issues"
Changelog = "https://github.com/iomgaa-ycz/Scrivai/blob/main/CHANGELOG.md"

[project.scripts]
scrivai-cli = "scrivai.cli.__main__:main"

[project.entry-points."pytest11"]
scrivai_contract = "scrivai.testing.contract"

[tool.setuptools.packages.find]
include = ["scrivai*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "contract: 契约测试(契约稳定性 / 跨项目协议)",
    "integration: 真实 API 调用测试(需要网络和 API key)",
    "unit: 单元测试(使用 mock)",
]
addopts = "-v --tb=short"
